--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background"
     android:layout_height="match_parent"
     tools:context=".PdfDetailActivity">
 
@@ -26,15 +26,199 @@
             android:id="@+id/titleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="책 정보"
             android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
-
-
+            android:text="책 정보"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </RelativeLayout>
+
+    <ScrollView
+        android:id="@+id/readBookSv"
+        android:layout_below="@+id/toolbarRl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/bookRv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
+            <RelativeLayout
+                android:id="@+id/pdfRl"
+                android:layout_width="100dp"
+                android:layout_height="140dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/gray01">
+
+                <com.github.barteksc.pdfviewer.PDFView
+                    android:id="@+id/pdfView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </RelativeLayout>
+
+
+            <LinearLayout
+                android:id="@+id/contentLl"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@+id/pdfRl"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/bookTitleTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Book Title"
+                    style="@style/TextAppearance.MaterialComponents.Headline6"
+                    android:textColor="@color/black" />
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TableRow>
+                        <TextView
+                            android:id="@+id/categoryLabelTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="Category"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                        <TextView
+                            android:id="@+id/categoryTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="N/A"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                    </TableRow>
+
+                    <TableRow>
+                        <TextView
+                            android:id="@+id/dateLabelTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="Date"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                        <TextView
+                            android:id="@+id/dateTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="N/A"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:id="@+id/sizeLabelTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="Size"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                        <TextView
+                            android:id="@+id/sizeTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="N/A"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:id="@+id/viewsLabelTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="Views"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                        <TextView
+                            android:id="@+id/viewsTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="N/A"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:id="@+id/downloadsLabelTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="Downloads"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                        <TextView
+                            android:id="@+id/downloadsTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:text="N/A"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"/>
+
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+            <TextView
+                android:id="@+id/descriptionTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:layout_marginTop="5dp"
+                android:text="description"
+                android:textColor="@color/black"/>
+        </LinearLayout>
+
+
+    </ScrollView>
+
+    <android.widget.Button
+        android:id="@+id/readBookBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Read"
+        android:background="@drawable/shape_btn02"
+        android:drawableTop="@drawable/ic_book_white"/>
+
 
 
 
