--- a/app/src/main/res/layout/activity_dashboard_admin.xml
+++ b/app/src/main/res/layout/activity_dashboard_admin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".DashboardAdminActivity">
+    tools:context=".Activities.DashboardAdminActivity">
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
@@ -50,24 +50,30 @@
         android:id="@+id/searchEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbarRl"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/white"
         android:drawableLeft="@drawable/ic_search_gray"
         android:hint="검색"
-        android:layout_below="@+id/toolbarRl"
         android:padding="10dp"
-        android:background="@color/white"
-        android:textColorHint="@color/gray01"
         android:textColor="@color/black"
-        android:layout_margin="10dp"/>
+        android:textColorHint="@color/gray01" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/searchEt"
         android:layout_above="@+id/bottomLl"
-        tools:listitem="@layout/row_category"
-        android:layout_margin="5dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_below="@+id/searchEt"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/row_category" />
 
     <LinearLayout
         android:id="@+id/bottomLl"
