--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/background"
     android:layout_height="match_parent"
-    tools:context=".PdfDetailActivity">
+    tools:context=".Activities.PdfDetailActivity">
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
