--- a/app/src/main/res/layout/activity_pdf_view.xml
+++ b/app/src/main/res/layout/activity_pdf_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".PdfViewActivity">
+    tools:context=".Activities.PdfViewActivity">
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
