--- a/app/src/main/res/drawable/shape_edittext01.xml
+++ b/app/src/main/res/drawable/shape_edittext01.xml
@@ -4,7 +4,9 @@
 
     <solid android:color="@color/white"/>
 
-    <corners android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
+    <stroke android:color="@color/gray01"
+        android:width="1dp"/>
+
+    <corners android:radius="3dp"/>
 
 </shape>
