--- a/app/src/main/res/layout/row_pdf_sub.xml
+++ b/app/src/main/res/layout/row_pdf_sub.xml
@@ -2,13 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    app:cardUseCompatPadding="true"
+    app:cardUseCompatPadding="false"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/shape_edittext01"
         android:orientation="vertical">
 
         <LinearLayout
