--- a/app/src/main/res/layout/activity_dashboard_admin.xml
+++ b/app/src/main/res/layout/activity_dashboard_admin.xml
@@ -13,6 +13,14 @@
         android:layout_height="?actionBarSize"
         android:background="@drawable/shape_toolbar02">
 
+        <ImageButton
+            android:id="@+id/profileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/ic_person_white"/>
+
         <TextView
             android:id="@+id/titleTv"
             android:layout_width="wrap_content"
