--- a/app/src/main/res/layout/activity_dashboard_user.xml
+++ b/app/src/main/res/layout/activity_dashboard_user.xml
@@ -14,6 +14,14 @@
         android:layout_height="?actionBarSize"
         android:background="@drawable/shape_toolbar01">
 
+        <ImageButton
+            android:id="@+id/profileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/ic_person_white"/>
+
         <TextView
             android:id="@+id/titleTv"
             android:layout_width="wrap_content"
