--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/home"
+        android:enabled="true"
         android:icon="@drawable/ic_home_white"
         android:title="home"/>
 
     <item android:id="@+id/library"
+        android:enabled="true"
         android:icon="@drawable/ic_book_white"
         android:title="library"/>
 
     <item android:id="@+id/favorite"
+        android:enabled="true"
         android:icon="@drawable/ic_favorite_white"
         android:title="favorite"/>
 
