--- a/app/src/main/res/layout/row_home_book.xml
+++ b/app/src/main/res/layout/row_home_book.xml
@@ -9,6 +9,7 @@
     app:contentPadding="5dp">
 
     <RelativeLayout
+        android:id="@+id/clikable"
         android:layout_width="100dp"
         android:layout_height="140dp">
 
@@ -24,12 +25,13 @@
             <com.github.barteksc.pdfviewer.PDFView
                 android:id="@+id/pdfView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent" >
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </com.github.barteksc.pdfviewer.PDFView>
 
         </RelativeLayout>
 
@@ -51,23 +53,13 @@
 
 
             <TextView
-                android:id="@+id/countLb"
-                style="@style/TextAppearance.MaterialComponents.Caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_below="@id/titleTv"
-                android:text="조회수"
-                android:textColor="@color/black" />
-
-            <TextView
                 android:id="@+id/viewCountTv"
                 style="@style/TextAppearance.MaterialComponents.Caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:layout_below="@id/titleTv"
-                android:layout_toEndOf="@id/countLb"
+                android:textSize="10sp"
                 android:text="count"
                 android:textColor="@color/black" />
 
@@ -78,7 +70,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/titleTv"
                 android:layout_alignParentEnd="true"
-                android:layout_marginLeft="5dp"
+                android:layout_marginTop="3dp"
+                android:textSize="11sp"
                 android:text="category"
                 android:textColor="@color/black"/>
 
